welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:13: error: expected class or object definition
def isFacingTrail():Boolean = {
^