welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt(c:Color) {
	do{
	if (isFacingTrail() == true)	{
		baisseBrosse
		avance
		leveBrosse
	}else{
		gauche()}
	}while(!estSurBiscuit)
	prendBiscuit}
 }
def isFacingTrail():Boolean = {
	if (estFaceMur){
		return false
	}
	avance()
	var trace:Boolean = getCouleurSol() == c;	
	recule()
	return trace
	
 // here comes your isFacingTrail method   
